--- a/tesk3/code/task3.html
+++ b/tesk3/code/task3.html
@@ -72,21 +72,21 @@
 <body>
 <div class="big">
     <div class="back">
-        <img src="../zmool/images/back1.png"/>
+        <img src="../img/back1.png"/>
     </div>
     <div class="logo">
-        <img src="../zmool/images/logo.png"/>
+        <img src="../img/logo.png"/>
     </div>
     <div class="content">
         <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以及线下聚会桌游道具。</p>
     </div>
     <div class="foot">
         <div class="foot1">
-            <img src="../zmool/images/footleft.png"/>
+            <img src="../img/footleft.png"/>
             <p>290560933</p>
         </div>
         <div class="foot1">
-            <img src="../zmool/images/footright.png"/>
+            <img src="../img/footright.png"/>
             <p>BJPTTeng</p>
         </div>
     </div>
